syntax = "proto3";
package network;

message CreateNetworkInterfaceRequest {
    string workload_id = 1;
    string ip_address = 2;
    repeated int32 ports = 3;
}

message CreateNetworkInterfaceResponse {
    string interface_name = 1;
}

message DeleteNetworkInterfaceRequest {
    string workload_id = 1;
}

message SetupRequest {
    string ip_address = 1;
    string sub_network = 2;
}

message SetupResponse {
    string interface_name = 1;
}

message Empty {}

service Network {
    rpc CreateNetworkInterface(CreateNetworkInterfaceRequest) returns (CreateNetworkInterfaceResponse) {}
    rpc DeleteNetworkInterface(DeleteNetworkInterfaceRequest) returns (Empty) {}
    rpc Setup(SetupRequest) returns (SetupResponse) {}
}